samples/_failures_safe/1761462704_3842a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af08b566.c: In function ‘main’:
./samples/SAFE/__tmp_af08b566.c:164:42: error: expected ‘;’ at end of input
  164 |             case EVENT_DATA_READY: printf
      |                                          ^
      |                                          ;
./samples/SAFE/__tmp_af08b566.c:164:13: error: expected declaration or statement at end of input
  164 |             case EVENT_DATA_READY: printf
      |             ^~~~
./samples/SAFE/__tmp_af08b566.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_af08b566.c:164:13: error: expected declaration or statement at end of input
